--- a/index.html
+++ b/index.html
@@ -75,9 +75,13 @@
             <div class="container">
               <div class="row align-items-center justify-content-center text-center">
                 <div class="col-md-10" data-aos="fade-up">
+                  <!--
                   <h2 class="heading mb-5">Down to Earth</h2>
                   <p class="sub-heading mb-5">Flexitarian Kitchen</a>
                   </p>
+                  -->
+                  <img src="images/logo.jpg" width="400" height="347"/>
+                  <p></p>
                   <p><a href="#section-findus" class="smoothscroll btn btn-outline-white px-5 py-3">How to find
                       us</a></p>
                 </div>
