Fixed images and other things

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" id="pills-dinner-tab" data-toggle="pill" href="#pills-dinner" role="tab"
-                      aria-controls="pills-dinner" aria-selected="false">Dinner</a>
+                      aria-controls="pills-dinner" aria-selected="false">Later on</a>
                   </li>
                 </ul>
                 <div class="tab-content" id="pills-tabContent">
