--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 <p>Down to Earth Glasgow, 351 Dumbarton Rd, Partick, Glasgow G11 6AL</p>
                 <p></p>
                 <div class="map-wrap">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2238.537813995515!2d-4.308628767066161!3d55.87068494901234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488845dcdeda0577%3A0xb3c54597dfa5e518!2sDown+to+Earth+Glasgow!5e0!3m2!1sen!2suk!4v1554294823556!5m2!1sen!2suk" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2238.537813995515!2d-4.308628767066161!3d55.87068494901234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488845dcdeda0577%3A0xb3c54597dfa5e518!2sDown+to+Earth+Glasgow!5e0!3m2!1sen!2suk!4v1554294823556!5m2!1sen!2suk" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
                 <p class="sub-heading mb-5">Open for breakfast, lunch and dinner seven days a week, drop in and see what
                   you fancy. </p>
